// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeaderButton > should render 1`] = `
<DocumentFragment>
  <button
    aria-label="test"
    class="w-10 min-h-12 sm:w-12 hover:bg-grey-mid active:bg-grey-mid cursor-pointer"
    id="circle-question-overlay-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-question fa-xl"
      data-icon="circle-question"
      data-prefix="fas"
      role="img"
      style="color: rgb(255, 255, 255);"
      viewBox="0 0 512 512"
    >
      <path
        d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
        fill="currentColor"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`HeaderButton > should render correctly and disable onClick when overlay is defined 1`] = `
<DocumentFragment>
  <button
    aria-label="test"
    class="w-10 min-h-12 sm:w-12"
    id="circle-question-overlay-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-question fa-xl"
      data-icon="circle-question"
      data-prefix="fas"
      role="img"
      style="color: rgb(255, 255, 255);"
      viewBox="0 0 512 512"
    >
      <path
        d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
        fill="currentColor"
      />
    </svg>
  </button>
</DocumentFragment>
`;
